<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblRedeemReport"
        android:textSize="14sp"
        android:gravity="center"
        android:padding="5dp"
        android:textColor="@color/black"/>


    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView

            android:id="@+id/tvRestaurantName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblRestoname"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:textStyle="bold"/>


        <TextView
            android:text="@string/lblcoupon"
            android:id="@+id/tvCoupon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:textStyle="bold"/>

        <TextView
            android:text="@string/lblRedeemRate"
            android:id="@+id/tvRedeemDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:minHeight="80dp"
            android:minWidth="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:layout_below="@+id/linear"
            android:id="@+id/rvVoucherReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical" />

        <Button
            android:id="@+id/btnNoData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal|center_vertical"
            android:background="@android:color/transparent"
            android:drawablePadding="5dp"
            android:layout_marginTop="30dp"
            android:drawableTop="@drawable/ic_orderhistory"
            android:padding="5dp"
            android:text="Coupon's are Not Available."
            android:textColor="@color/black"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>