<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".resto.ui.ChangePasswordActivity"
    android:orientation="vertical">


    <include layout="@layout/toolbar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_LoginForm">

        <LinearLayout
            style="@style/ViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/paddingTop_layoutLgnId">

            <EditText
                android:id="@+id/etOldPassword"
                style="@style/EditTextStyleLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_etLoginId"
                android:layout_marginLeft="5dp"
                android:background="@drawable/layout_bottom_border"
                android:backgroundTint="@color/disabledTextColor"
                android:hint="@string/lblHintOldPassword"
                android:inputType="text"
                android:textColor="@color/appThemeColor"
                android:textColorHint="@color/disabledTextColor"
                android:textSize="@dimen/headTextSize">
            </EditText>

            <EditText
                android:id="@+id/etnewPassword"
                style="@style/EditTextStyleLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_etLoginId"
                android:layout_marginLeft="5dp"
                android:background="@drawable/layout_bottom_border"
                android:backgroundTint="@color/disabledTextColor"
                android:hint="@string/lblHintNewPassword"
                android:inputType="text"
                android:textColor="@color/appThemeColor"
                android:textColorHint="@color/disabledTextColor"
                android:textSize="@dimen/headTextSize">
            </EditText>

            <EditText
                android:id="@+id/etConfimPassword"
                style="@style/EditTextStyleLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_etLoginId"
                android:layout_marginLeft="5dp"
                android:background="@drawable/layout_bottom_border"
                android:backgroundTint="@color/disabledTextColor"
                android:hint="@string/lblHintConfirmPassword"
                android:inputType="text"
                android:textColor="@color/appThemeColor"
                android:textColorHint="@color/disabledTextColor"
                android:textSize="@dimen/headTextSize">

            </EditText>

        </LinearLayout>

        <Button
            android:id="@+id/btnChangePwd"
            style="@style/ButtonStyleLogin"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/layoutMargin_btnLgnUsingIdPwd"
            android:layout_marginLeft="@dimen/marginLeft_btnLogin"
            android:layout_marginRight="@dimen/marginRight_btnLogin"
            android:text="@string/lblChangePassword"/>


        <LinearLayout
            android:id="@+id/layoutShowMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:minHeight="100dp"
            android:orientation="vertical"
            android:visibility="invisible">

            <TextView
                android:id="@+id/txtViewMsg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>